<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.kartarkat.naruto4.Team">


    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/our_team"
        android:textSize="35sp"
        android:padding="20dp"
        android:textAlignment="center"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#f0f0"
        android:id="@+id/textView3"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/d1"
        android:textSize="30sp"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/d4"
        android:textSize="30sp"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:layout_marginBottom="18dp"
        android:id="@+id/textView4"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/d2"
        android:textSize="30sp"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView6" />


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/d3"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:layout_above="@+id/textView6"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginBottom="23dp" />



</RelativeLayout>
