<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.kartarkat.naruto4.Home">


    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/b3"
        android:textSize="35sp"
        android:padding="20dp"
        android:textAlignment="center"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#f0f0"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/b2"
        android:textSize="30sp"
        android:padding="20dp"
        android:onClick="after"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:id="@+id/textView5"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/textView2"
        android:layout_alignStart="@+id/textView4" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        android:textSize="30sp"
        android:onClick="morn"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:id="@+id/textView4"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />


    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/our_team"
        android:textSize="30sp"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:onClick="team"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:id="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/b4"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:padding="20dp"
        android:elevation="4dp"
        android:onClick="output"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/textView6"
        android:layout_alignStart="@+id/textView5" />

</RelativeLayout>
