<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.kartarkat.naruto4.Welcome">

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/a1"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff"

        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/a2"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#fff0"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/a3"
        android:textSize="29sp"
        android:padding="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="#2d2d2d"
        android:textColor="#f0f0"
        android:id="@+id/textView3"
        android:layout_marginBottom="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
